samples/_failures_safe/1761145518_505f1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa3765db.c: In function ‘main’:
./samples/SAFE/__tmp_aa3765db.c:181:24: error: missing terminating " character
  181 |                 printf("Enter output filename:
      |                        ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_aa3765db.c:181:17: error: expected expression at end of input
  181 |                 printf("Enter output filename:
      |                 ^~~~~~
./samples/SAFE/__tmp_aa3765db.c:181:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa3765db.c:181:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa3765db.c:181:17: error: expected declaration or statement at end of input
